cart options spacing fix

--- a/assets/styles/04-components/product.scss
+++ b/assets/styles/04-components/product.scss
@@ -137,7 +137,7 @@
 
 // cart
 .cart-item{
-  form > section{
+  salla-conditional-fields > section{
     @apply px-0 pt-0 last:mb-0 last:pb-0;
   }
 }
